# toyvpn

./: .gitignore  .gitmodules  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ssrlive/toyvpn/: ToyVpnClient.java  ToyVpnConnection.java  ToyVpnRunnable.java  ToyVpnService.java
gradle/wrapper/: gradle-wrapper.properties
rust/: .gitignore  Cargo.toml  run.sh
rust/src/: main.rs
server/linux/: CMakeLists.txt  Makefile  ToyVpnServer.c  ToyVpnServer2.c  ref_count_def.h  run-server.sh  sockaddr_universal.c  sockaddr_universal.h
toyvpn/: build.gradle
toyvpn/src/main/: AndroidManifest.xml
toyvpn/src/main/java/com/ssrlive/toyvpn/: ToyVpnRunnable.java  ToyVpnService.java
toyvpn/src/main/res/values/: strings.xml
